
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/type.proto";

message so_global {
	int32                          id        =      1;
    prototype.dynamic_properties   props     =      2;
      
}


message so_unique_global_by_id {
	int32                       	id    = 1;
}
